@@ -162,8 +162,7 @@ BEGIN
     PUSHBUTTON      "...",IDC_BROWSE,273,52,14,14
     GROUPBOX        "Log Message",IDC_STATIC,7,78,286,71
     EDITTEXT        IDC_LOGMESSAGE,13,88,274,54,ES_MULTILINE | 
-                    ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | 
-                    WS_VSCROLL
+                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
     DEFPUSHBUTTON   "&OK",IDOK,186,156,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,243,156,50,14
 END
@@ -181,7 +180,7 @@ BEGIN
     PUSHBUTTON      "...",IDC_BROWSE,273,28,14,14
     GROUPBOX        "Import &Message",IDC_STATIC2,7,55,286,78
     EDITTEXT        IDC_MESSAGE,13,67,274,60,ES_MULTILINE | ES_AUTOVSCROLL | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN
+                    ES_WANTRETURN
     GROUPBOX        "&Temporary Files To Delete",IDC_STATIC3,7,144,286,136
     CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | 
                     LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,13,155,274,103
@@ -191,7 +190,7 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,243,284,50,14
 END
 
-IDD_LOGMESSAGE DIALOGEX 0, 0, 300, 245
+IDD_LOGMESSAGE DIALOGEX 0, 0, 300, 336
 STYLE DS_SETFONT | DS_SETFOREGROUND | DS_FIXEDSYS | WS_MINIMIZEBOX | 
     WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_APPWINDOW
@@ -202,9 +201,11 @@ BEGIN
                     LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER,7,7,286,
                     133
     CONTROL         "",IDC_LOGMSG,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | 
-                    LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,148,286,69
-    PUSHBUTTON      "Get &All",IDC_GETALL,186,224,50,14,WS_DISABLED
-    DEFPUSHBUTTON   "&OK",IDOK,243,224,50,14
+                    LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,233,286,75
+    PUSHBUTTON      "Get &All",IDC_GETALL,186,315,50,14,WS_DISABLED
+    DEFPUSHBUTTON   "&OK",IDOK,243,315,50,14
+    EDITTEXT        IDC_MSGVIEW,7,146,286,81,ES_MULTILINE | ES_READONLY | 
+                    ES_WANTRETURN | WS_VSCROLL
 END
 
 IDD_LOGPROMPT DIALOGEX 0, 0, 300, 275
@@ -215,7 +216,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Commit to:",IDC_STATIC,6,7,287,8
     EDITTEXT        IDC_LOGMESSAGE,6,33,287,54,ES_MULTILINE | ES_AUTOVSCROLL | 
-                    ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
+                    ES_WANTRETURN | WS_VSCROLL
     CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,6,
                     93,287,109
@@ -481,7 +482,7 @@ CAPTION "Input"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Enter Log Message:",IDC_HINTTEXT,7,7,223,11
-    EDITTEXT        IDC_INPUTTEXT,7,17,223,69,ES_MULTILINE | ES_AUTOHSCROLL | 
+    EDITTEXT        IDC_INPUTTEXT,7,17,223,69,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     DEFPUSHBUTTON   "&OK",IDOK,121,92,50,14
     PUSHBUTTON      "&Cancel",IDCANCEL,180,92,50,14
@@ -603,7 +604,7 @@ BEGIN
         RIGHTMARGIN, 293
         VERTGUIDE, 236
         TOPMARGIN, 7
-        BOTTOMMARGIN, 238
+        BOTTOMMARGIN, 329
     END
 
     IDD_LOGPROMPT, DIALOG
